[project]
name = "modlab"
version = "0.1.0"
description = "Multidimensional Operational Dependency Lab — a framework for modelling and analysing critical infrastructure interdependencies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
]
